# report-ocr

./: .gitignore  README.md  extract_report.py  pyproject.toml  report_ocr.py
